PENDING
=======

 * Hide functions from macauthlib.utils that were previously available
   directly from macauthlib.  This will ensure users import them from the
   canonical location.


0.3.0 - 2012-07-11
==================

 * Simplify API of the NonceCache class; it now provides a single method
   check_nonce() rather than separate is_fresh() and add_nonce() methods.


0.2.0 - 2012-06-01
==================

 * Fix a race condition bug in NonceCache.


0.1.0 - 2012-02-27
==================

 * Initial release.